--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,31 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Ensure no legacy backend configuration
+        shell: bash
+        run: |
+          if [ -f src/main/resources/application.properties ]; then
+            if grep -Eq '^(spring\.datasource|spring\.jpa)' src/main/resources/application.properties; then
+              echo "::error::Spring datasource/JPA configuration must not exist for this static site."
+              exit 1
+            fi
+            if grep -Eq '^server\.port' src/main/resources/application.properties; then
+              echo "::warning::'server.port' is no longer required and will be ignored." >&2
+            fi
+          fi
+
+          if git grep -nE 'spring\\.datasource|spring\\.jpa|jdbc:' -- . >/dev/null 2>&1; then
+            echo "::error::Found JDBC/JPA references in the repository. Remove them to keep the project static-only."
+            git grep -nE 'spring\\.datasource|spring\\.jpa|jdbc:' -- .
+            exit 1
+          fi
+
       - name: Install dependencies
         run: npm ci
 
       - name: Build
+        env:
+          INSTAGRAM_ACCESS_TOKEN: ${{ secrets.INSTAGRAM_ACCESS_TOKEN }}
         run: npm run build
 
       - name: Upload artifact
